--- a/bonus/mail/index.html
+++ b/bonus/mail/index.html
@@ -9,8 +9,7 @@
    
 </head>
 <body>
+
     
-    
-    <script type="text/javascript" src="js/main.js"></script>
-</body>
+    <script type="text/javascript" src="js/main.js"></script></body>
 </html>
