--- a/bonus/mail/index.html
+++ b/bonus/mail/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 
+    <main>
+        <label for="email">inserisci la tua email</label>
+        <input type="email" id="email">
+
+        <button id="accessButton">accedi</button>
+
+        <div id="accessState"></div>
+    </main>
     
     <script type="text/javascript" src="js/main.js"></script></body>
 </html>
